# bitonic-sort-mpi

./: CMakeLists.txt  Makefile  README.md  homework2.md  main.c
.github/workflows/: build.yml  test.yml
benchmarks/: export_benchmark_results.py  plot_benchmarks.py  run_benchmarks.sh
docs/: main.tex
include/: bitonic_sort_mpi.h  distributed_sort_mpi.h  parallel_sort_omp.h  util.h
src/: bitonic_sort_mpi.c  distributed_sort_mpi.c  main.c  parallel_sort_omp.c  util.c
tests/: run_tests.sh  test.c
